bugfix-Prevent Overlap Between Header and Home Section, add more skills-info__technologies__card and do skills-info__technologies__card layout

--- a/Personal Website Vanilla/css/style.scss
+++ b/Personal Website Vanilla/css/style.scss
@@ -46,6 +46,7 @@ section {
 nav {
   position: fixed;
   z-index: 1;
+  background-color: #fff;
   height: 80px;
   box-shadow: 0 1px 0 #f9fafb;
   width: 100%;
@@ -85,6 +86,7 @@ nav {
 }
 
 .home {
+  padding-top: 80px; //Prevent Overlap Between Header and Home Section
   justify-content: space-around;
   .home-info {
     display: flex;
@@ -230,6 +232,15 @@ nav {
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
         margin: 20px 0 10px 0;
         transition: opacity 0.6s ease-out;
+        img {
+          width: 48px;
+          height: 48px;
+        }
+        span {
+          display: inline-block;
+          margin-left: 20px;
+          font-weight: 500;
+        }
       }
     }
   }
